# Myna

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  VERSION  autofoam_case_gen.py  index.html  install_conda_env.sh  install_workflow.sh  main.py  mkdocs.yml  pyproject.toml  run_autofoam.py  run_autothesis.py  run_classification.py  run_exaca.py  run_rve_selection.py  settings.json  settings.yaml
.codex/: AGENTS.md  config.toml
.codex/agents/: README.md  architect.toml  coordinator.toml  documenter.toml  integrator.toml  reviewer.toml  tester.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md  work_item.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_pull_request.md  chore_pull_request.md  feature_pull_request.md  refactor_pull_request.md
.github/workflows/: CI.yml  doc-deployment.yml  pre-commit.yml
CONTRIBUTING/: index.html
api-docs/application/: index.html
api-docs/core/: index.html
api-docs/database/: index.html
cli/: index.html
cli/peregrine_launcher/: config.yaml  input_gv.yaml  peregrine_default_workspace.yaml  readme.md
developer_guide/: index.html
doc/: developer_guide.md
docker/: index.html
docs/: .pages  CONTRIBUTING.md  agents.md  cli.md  developer_guide.md  docker.md  documentation.md  getting_started.md  index.md  testing.md  updating_changelog.md
docs/agents/: architect.md  coordinator.md  documenter.md  integrator.md  reviewer.md  tester.md
docs/decisions/: .pages  0000-template.md  0001-workflow-context.md  index.md
documentation/: index.html
examples/: README.md  example-workspace.yaml  examples.myna-workspace
examples/Pelican/: info.yaml
examples/Peregrine/: meta.npz
examples/PeregrineHDF5/: minimal.hdf5
examples/cases/: README.md
examples/classify_solidification/: input.yaml  input_rve.yaml  plot_all_parts.py
examples/cluster_solidification/: input.yaml  input_rve.yaml  plot_all_parts.py  readme.md
examples/demo/: demo.yaml  settings.yaml
examples/depth_map_part/: input.yaml
examples/melt_pool_geometry_part/: input.yaml
examples/melt_pool_geometry_part_pelican/: input.yaml
examples/microstructure_region/: ic.yaml  input.yaml
examples/microstructure_region_slice/: input.yaml
examples/openfoam_meshing/: input.yaml
examples/openfoam_meshing_script/: scripted_meshing_example.py
examples/pelican_test/: input.yaml
examples/rve_part_center/: input.yaml
examples/single_track_calibration/: experiments.yaml  input.yaml  readme.md
examples/solidification_build_region/: input.yaml
examples/solidification_part/: input.yaml  readme.md
examples/solidification_part_hdf5/: input.yaml
examples/solidification_part_json/: input.yaml
examples/solidification_part_pelican/: input.yaml
examples/solidification_region_reduced/: input.yaml
examples/solidification_region_reduced_stl/: input.yaml
examples/solidification_region_stl/: input.yaml
examples/temperature_final_part/: input.yaml
examples/temperature_part/: input.yaml
examples/temperature_part_pvd/: input.yaml
examples/thermal_part/: input.yaml
examples/thermal_part_classify/: input.yaml  input_rve.yaml  readme.md
examples/thermal_region_reduced_solidification/: input.yaml
examples/thermal_region_stl/: input.yaml
examples/utils/: README.md
examples/vtk_to_exodus_region/: input.yaml
examples/workspaces/: README.md  example-workspace.yaml
getting_started/: index.html
installers/: install_3dthesis.sh  install_autofoam.sh  install_autothesis.sh  install_classification.sh
interfaces/: readme.md
myna/: __init__.py
myna/application/: __init__.py  readme.md
myna/core/: __init__.py
myna/database/: __init__.py  database_types.py  nist_ambench_2022.py  peregrine.py  peregrine_hdf5.py
resources/3DThesis_materials/: IN718.txt
scripts/: bsd-3.tmpl  check_dev_tools.py  check_docs_harness.py  group_docs.py  update_file_headers.sh
search/: search_index.json
stylesheets/: extra.css
template_3DThesis/: Beam.txt  Domain.txt  Mode.txt  Output.txt  Path.txt
testing/: index.html
tests/: conftest.py  example_paths.py  test_additivefoam_app_behavior.py  test_app_argument_parsing.py  test_app_versioning.py  test_component_output_paths.py  test_condor_app_behavior.py  test_configure.py  test_cubit_vtk_to_exodus_region_behavior.py  test_database.py  test_deer_creep_timeseries_region_app_behavior.py  test_docs_harness.py  test_exaca.py  test_exaca_app_behavior.py  test_examples.py  test_examples_parallel.py  test_examples_serial.py  test_executables.py  test_load_input_paths.py  test_myna_json.py  test_openfoam.py  test_part_layer_utils.py  test_peregrine_cli.py  test_temperature_surface_part.py  test_thesis_app_behavior.py  test_version.py  test_workflow_context.py
updating_changelog/: index.html
(+750 files in other folders)
