[build-system]
requires = ["setuptools>=50.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myna"
version = "1.1.0.dev0"
authors = [
    { name="Gerry Knapp", email="knappgl@ornl.gov" },
    { name="Sam Reeve", email="reevest@ornl.gov"},
    { name="John Coleman", email="colemanjs@ornl.gov"},
    { name="Jamie Stump", email="stumpbc@ornl.gov"},
    { name="Stephen DeWitt", email="dewittsj@ornl.gov"}]
description = "A structured interface between Additive Manufacturing build database(s) and multi-stage modeling and simulation workflows"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]
dependencies = [
    'PyYAML',
    # Necessary for pyebsd
    'numpy < 2.0',
    'numpy-stl',
    'pandas',
    'matplotlib',
    'mistlib @ git+https://github.com/ORNL-MDF/mist.git',
    'vtk',
    'h5py',
    'polars',
    'bnpy @ git+https://github.com/gknapp1/bnpy',
    'pyebsd @ git+https://github.com/arthursn/pyebsd.git',]

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'licenseheaders']

[project.scripts]
myna = "myna.core.workflow.all:main"

[tool.setuptools]
py-modules = ["myna"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"]

[tool.codespell]
ignore-words-list = 'mater,nd'
skip = './resources'
quiet-level = 3
