[build-system]
requires = ["setuptools>=50.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myna"
version = "1.2.0.dev0"
authors = [
    { name="Gerry Knapp", email="knappgl@ornl.gov" },
    { name="Sam Reeve", email="reevest@ornl.gov"},
    { name="John Coleman", email="colemanjs@ornl.gov"},
    { name="Jamie Stump", email="stumpbc@ornl.gov"},
    { name="Stephen DeWitt", email="dewittsj@ornl.gov"}]
description = "A structured interface between Additive Manufacturing build database(s) and multi-stage modeling and simulation workflows"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]
dependencies = [
    'PyYAML',
    # Necessary for pyebsd
    'numpy < 2.0',
    'numpy-stl',
    'pandas',
    'matplotlib',
    'mistlib @ git+https://github.com/ORNL-MDF/mist.git',
    'vtk',
    'h5py',
    'polars',
    'scipy',
    'gitpython']

[project.optional-dependencies]
dev = [
  'pytest',
  'black>24.10.0',
  'pylint',
  'licenseheaders']
exaca = [
  'pyebsd @ git+https://github.com/arthursn/pyebsd.git',
]
bnpy = [
    'bnpy @ git+https://github.com/gknapp1/bnpy',
    'opencv-python',
    'POT',
]
deer = [
    'netCDF4',
]

[project.scripts]
myna = "myna.core.workflow.all:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"]

[tool.codespell]
ignore-words-list = 'mater,nd'
quiet-level = 3
